Fix modal scrollbar to main window

--- a/src/styles.css
+++ b/src/styles.css
@@ -374,13 +374,15 @@ ul#recipe-list {
 
 #recipe-modal {
   max-width: 100vw;
+  width: 100%;
   /* min-height: 100%; */
-  height: auto;
-  margin: 5vh auto;
-  padding: 1rem;
+  max-height: 100%;
+  padding: 2rem 1rem;
   color: inherit;
+  background-color: var(--clr-white);
   border: 0;
-  border-radius: 16px;
+  overflow-y: auto;
+
 }
 
 #recipe-modal::backdrop {
@@ -390,9 +392,12 @@ ul#recipe-list {
 .wrapper-recipe {
   max-width: 556px;
   height: auto;
+  margin: 0 auto;
   display: grid;
   padding: 5vh clamp(1rem, 5vw, 3rem) 2.5rem;
   gap: 2.5rem;
+  background-color: #fff;
+  border-radius: 16px;
 }
 
 .wrapper-recipe--header {
